<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_2"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_redondeado_invisible"
            android:foregroundGravity="left"
            android:onClick="atras"
            app:srcCompat="@drawable/ic_back"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginRight="55dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Registro de Maquinarias"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/layout_redondeado_opacidad"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGuarda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.835">


        <TextView
            android:id="@+id/viewCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_codigo"
            android:textColor="#011D55"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_codigo"
            android:inputType="textLongMessage"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:textColor="#011D55"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_nombre"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewCapacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_capacidad"
            android:textColor="#011D55"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCapacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_capacidad"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_peso"
            android:textColor="#011D55"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/boton_redondeado_azul_mate"
        android:text="@string/tex_boton_guardar"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>