<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_2"
    tools:context=".VerActivity">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp">


        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/layout_redondeado_invisible"
            android:foregroundGravity="left"
            android:onClick="atras"
            app:srcCompat="@drawable/ic_back"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tvEmcabesado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Detalles"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@drawable/layout_redondeado_invisible"
            android:tint="#000000"
            app:srcCompat="@drawable/ic_save"
            tools:layout_editor_absoluteX="342dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageButton
            android:id="@+id/btnEditar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@drawable/layout_redondeado_invisible"
            android:tint="#000000"
            app:srcCompat="@drawable/ic_edit"
            tools:layout_editor_absoluteX="342dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageButton
            android:id="@+id/btnEliminar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:background="@drawable/layout_redondeado_invisible"
            android:tint="#000000"
            app:srcCompat="@drawable/ic_delete"
            tools:layout_editor_absoluteX="342dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="353dp"
        android:layout_height="691dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/layout_redondeado_opacidad"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.123">

        <TextView
            android:id="@+id/viewCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_codigo"
            android:textColor="#032D73"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_codigo"
            android:inputType="textLongMessage"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:textColor="#032D73"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_nombre"
            android:inputType="textMultiLine"
            android:labelFor="@id/viewNombre"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/viewCapacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_capacidad"
            android:textColor="#032D73"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCapacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_capacidad"
            android:inputType="text"
            android:labelFor="@id/viewCapacidad"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/viewPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_peso"
            android:textColor="#032D73"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="text"
            android:labelFor="@id/viewPeso"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="321dp"
            android:layout_height="336dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@mipmap/excavadoraoruga" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>